[package]
name = "onay_stat"
version = "0.1.4"
authors = ["djakish"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/djakish/onay_stat"
homepage = "https://github.com/djakish/onay_stat"
description = """
Simple crate for calculating sum, mean, median, median but sorted, range, 
variance, standard deviation, mode, max and min value and their indices.
"""
keywords = ["statistics", "math"]
categories = ["mathematics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"

[dev-dependencies]
float-cmp = "0.9.0"
